<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetbot_mirea</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="firegrock@todo.todo">firegrock</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!--<exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_cartographer</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_example</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>turtlebot3_node</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>-->

  <exec_depend>jetbot_mirea_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
